--- a/index.html
+++ b/index.html
@@ -7,4 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="css/style.css">
 </head>
+<body>
+    <h1>AMIR CHORT</h1>
+</body>
 </html>
