--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>AMIR CHORT</h1>
+    <h1>Kazakhstan Alga</h1>
 </body>
 </html>
